RESOLVED FIXED231581
[LFC][IFC] Do not break at the inline box boundary when wrapping is not allowed
https://bugs.webkit.org/show_bug.cgi?id=231581
Summary [LFC][IFC] Do not break at the inline box boundary when wrapping is not allowed
alan
Reported 2021-10-12 08:53:36 PDT
ssia
Attachments
Patch (10.44 KB, patch)
2021-10-12 08:55 PDT, alan
no flags
Patch (10.50 KB, patch)
2021-10-12 18:28 PDT, alan
no flags
alan
Comment 1 2021-10-12 08:55:39 PDT
alan
Comment 2 2021-10-12 18:28:21 PDT
EWS
Comment 3 2021-10-13 06:24:24 PDT
Committed r284090 (242918@main): <https://commits.webkit.org/242918@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441027 [details].
Radar WebKit Bug Importer
Comment 4 2021-10-13 06:25:19 PDT
Note You need to log in before you can comment on or make changes to this bug.