[LFC][IFC] Do not break at the inline box boundary when wrapping is not allowed https://bugs.webkit.org/show_bug.cgi?id=231581

Reviewed by Antti Koivisto.

Source/WebCore:

This patch ensures that we don't consider whitespace characters as soft wrap opportunities when wrapping is not allowed.

Test: fast/inline/no-soft-wrap-opportunity-at-inline-box.html

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::isWrappableRun):
(WebCore::Layout::InlineContentBreaker::isWrappingAllowed): Deleted.
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):
(WebCore::Layout::LineBuilder::handleInlineContent):
* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::isWrappingAllowed):
* layout/formattingContexts/inline/text/TextUtil.h:

LayoutTests:

* fast/inline/no-soft-wrap-opportunity-at-inline-box-expected.html: Added.
* fast/inline/no-soft-wrap-opportunity-at-inline-box.html: Added.


Canonical link: https://commits.webkit.org/242918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284090 268f45cc-cd09-0410-ab3c-d52691b4dbfc